--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,8 @@
 {
-  "tabWidth": 2,
+  "printWidth": 85,
+  "arrowParens": "always",
+  "semi": false,
+  "tabWidth": 4,
   "useTabs": true,
-  "singleQuote": true
+  "singleQuote": false
 }
