--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,19 @@
 {
-  "printWidth": 85,
   "arrowParens": "always",
+  "bracketSameLine": false,
+  "bracketSpacing": true,
+  "embeddedLanguageFormatting": "auto",
+  "htmlWhitespaceSensitivity": "css",
+  "insertPragma": false,
+  "jsxSingleQuote": false,
+  "printWidth": 85,
+  "proseWrap": "preserve",
+  "quoteProps": "as-needed",
+  "requirePragma": false,
   "semi": false,
-  "tabWidth": 4,
+  "singleQuote": false,
+  "trailingComma": "es5",
   "useTabs": true,
-  "singleQuote": false
+  "vueIndentScriptAndStyle": false,
+  "tabWidth": 4
 }
